--- a/examples-bootiful-gcp/kubernetes/helloworld-deployment.yaml
+++ b/examples-bootiful-gcp/kubernetes/helloworld-deployment.yaml
@@ -36,7 +36,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8080"
-        promteheus.io/path: /actuator/prometheus
+        prometheus.io/path: /actuator/prometheus
     spec:
       containers:
       - name: helloworld-service
@@ -45,6 +45,13 @@ spec:
           httpGet:
             path: /actuator/health
             port: 8080
+        resources:
+          requests:
+            cpu: 0.5
+            memory: 512Mi
+          limits:
+            cpu: 2.0
+            memory: 1Gi
         ports:
         - name: http
           containerPort: 8080
