--- a/examples-bootiful-gcp/kubernetes/helloworld-deployment.yaml
+++ b/examples-bootiful-gcp/kubernetes/helloworld-deployment.yaml
@@ -41,10 +41,18 @@ spec:
       containers:
       - name: helloworld-service
         image: gcr.io/wise-coyote-827/bootiful-helloworld-service:latest
-        readinessProbe:
+        livenessProbe:
+          initialDelaySeconds: 30
           httpGet:
             path: /actuator/health
             port: 8080
+        readinessProbe:
+          httpGet:
+            path: /hello/test
+            port: 8080
+            httpHeaders:
+            - name: x-b3-sampled
+              value: "0"
         resources:
           requests:
             cpu: 0.5
