--- a/examples-bootiful-gcp/kubernetes/helloworld-service.yaml
+++ b/examples-bootiful-gcp/kubernetes/helloworld-service.yaml
@@ -25,6 +25,7 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+      name: http
   selector:
     app: helloworld-service
     serving: "true"
