--- a/examples-java/kubernetes/guestbook-deployment.yaml
+++ b/examples-java/kubernetes/guestbook-deployment.yaml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: guestbook-service
@@ -41,8 +41,15 @@ spec:
         image: saturnism/guestbook-service:latest
         readinessProbe:
           httpGet:
-            path: /health
+            path: /actuator/health
             port: 8080
+        resources:
+          limits:
+            cpu: 2000m
+            memory: 2Gi
+          requests:
+            cpu: 1000m
+            memory: 1Gi
         ports:
         - name: http
           containerPort: 8080
