--- a/examples-java/kubernetes/redis-deployment.yaml
+++ b/examples-java/kubernetes/redis-deployment.yaml
@@ -14,7 +14,7 @@
 # limitations under the License.
 ###############################################################################
 
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
@@ -23,6 +23,9 @@ metadata:
     visualize: "true"
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: redis
   template:
     metadata:
       labels:
