--- a/examples-java/kubernetes/ui-deployment.yaml
+++ b/examples-java/kubernetes/ui-deployment.yaml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helloworld-ui
@@ -46,8 +46,15 @@ spec:
           value: http://guestbook-service:8080
         readinessProbe:
           httpGet:
-            path: /health
+            path: /actuator/health
             port: 8080
+        resources:
+          limits:
+            cpu: 2000m
+            memory: 2Gi
+          requests:
+            cpu: 1000m
+            memory: 1Gi
         ports:
         - name: http
           containerPort: 8080
