--- a/examples-java/helloworld-service/src/main/resources/application.properties
+++ b/examples-java/helloworld-service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 greeting=Hello $name from $hostname with $version
 spring.application.name=helloworld-service
-spring.sleuth.sampler.percentage=1.0
-spring.zipkin.baseUrl=http://zipkin:9411/
+spring.sleuth.sampler.probability=1.0
