--- a/examples/helloworld-service-opt-4/pom.xml
+++ b/examples/helloworld-service-opt-4/pom.xml
@@ -22,6 +22,11 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <jkube.version>1.0.1</jkube.version>
+        <!-- In order to expose 8080 as service port -->
+        <jkube.enricher.jkube-service.port>8080</jkube.enricher.jkube-service.port>
+        <!-- In order to get Service of type NodePort, default is ClusterIP -->
+        <jkube.enricher.jkube-service.type>NodePort</jkube.enricher.jkube-service.type>
     </properties>
 
     <build>
@@ -31,9 +36,9 @@
           <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
         <plugin>
-          <groupId>io.fabric8</groupId>
-          <artifactId>fabric8-maven-plugin</artifactId>
-          <version>3.2.27</version>
+          <groupId>org.eclipse.jkube</groupId>
+          <artifactId>kubernetes-maven-plugin</artifactId>
+          <version>${jkube.version}</version>
           <executions>
             <execution>
               <goals>
